--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <hr class="line">
         <div class="row">
             <div class="col-md-4">
+                <img src="pfp.png" alt="Peter the Anteater">
                 <h2>About me</h2>
                 <p>Write Something About Yourself Here.</p>
                 <h4>Likes:</h4>
@@ -57,18 +58,7 @@
                     <li><a href="https://github.com/tensorflow/tensorflow" target="_blank" rel=”noopener noreferrer”>tensorflow</a></li>
                 </ul>
             </div>
-            <div class="col-md-4">
-                <h2>Tweet Highlight</h2>
-                <blockquote class="twitter-tweet" data-theme="light">
-                    <p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>.
-                        <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> <a
-                            href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> <a
-                            href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash; US Department of
-                    the Interior (@Interior) <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May
-                        5, 2014</a>
-                </blockquote>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+            
         </div>
     </div>
 </body>
