--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="username">Your Name</h1>
+            <h1 class="username">Peter Anteater</h1>
         </div>
         <hr class="line">
         <div class="row">
             <div class="col-md-4">
-                <img src="pfp.png" alt="Peter the Anteater">
+                <img src="images/pfp.png" alt="Peter the Anteater">
+            </div>
+            <div class="col-md-4">
                 <h2>About me</h2>
                 <p>Write Something About Yourself Here.</p>
                 <h4>Likes:</h4>
