--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
         <div class="row">
             <div class="col-md-4">
                 <img src="images/pfp.png" alt="Peter the Anteater">
-            </div>
-            <div class="col-md-4">
-                <h2>About me</h2>
-                <p>Write Something About Yourself Here.</p>
-                <h4>Likes:</h4>
-                <p>Your likes.</p>
-                <h4>Dislikes:</h4>
-                <p>Your Dislikes.</p>
                 <h2>Contact & Social Media</h2>
                 <p>
                     <i class="fas fa-envelope"></i>
@@ -49,6 +41,16 @@
                     <i class="fab fa-github-square"></i>
                     <strong>Github: </strong><a href="https://github.com/">Github Account</a>
                 </p>
+            </div>
+            <div class="col-md-4">
+                <h2>About me</h2>
+                <p>Write Something About Yourself Here.</p>
+                <h4>Likes:</h4>
+                <p>Your likes.</p>
+                <h4>Dislikes:</h4>
+                <p>Your Dislikes.</p>
+                <h4>Experience</h4>
+                <p>Your relevant experience</p>
             </div>
             <div class="col-md-4">
                 <h2>Projects</h2>
