--- a/index.html
+++ b/index.html
@@ -42,15 +42,20 @@
                     <strong>Github: </strong><a href="https://github.com/">Github Account</a>
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h2>About me</h2>
                 <p>Write Something About Yourself Here.</p>
                 <h4>Likes:</h4>
                 <p>Your likes.</p>
                 <h4>Dislikes:</h4>
                 <p>Your Dislikes.</p>
-                <h4>Experience</h4>
+                <h4>Experience:</h4>
                 <p>Your relevant experience</p>
+                <h2>Cool Stuff I Did</h2>
+                <div class="projects">
+                    <p>I did a thing. Hire me.</p>
+                    <img src="images/zotbots.jpg" alt="just Zots being Bots">
+                </div>
             </div>
             <div class="col-md-4">
                 <h2>Projects</h2>
