--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr class="line">
         <div class="row">
             <div class="col-md-4">
-                <img src="images/pfp.png" alt="Peter the Anteater">
+                <img class="profile_image" src="images/pfp.png" alt="Peter the Anteater">
                 <h2>Contact & Social Media</h2>
                 <p>
                     <i class="fas fa-envelope"></i>
@@ -54,7 +54,7 @@
                 <h2>Cool Stuff I Did</h2>
                 <div class="projects">
                     <p>I did a thing. Hire me.</p>
-                    <img src="images/zotbots.jpg" alt="just Zots being Bots">
+                    <img class="project_image" src="images/zotbots.jpg" alt="just Zots being Bots">
                 </div>
             </div>
             <div class="col-md-4">
